--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 
-MONGO_URI =mongodb+srv://logesh:45HGYjjCZysIMuJ3@cluster0.rx6t4zt.mongodb.net/daysix
+MONGO_URI =mongodb+srv://wearedevelopersteam25:B8PoRv02IuJxZPkk@cluster0.wvvq5xt.mongodb.net/daysix
 
 JWT_SECRET =supersecretke
